--- a/index.html
+++ b/index.html
@@ -3,17 +3,29 @@
     <head>
         <title>Speech-checker</title>
         <link type="text/css" rel="stylesheet" href="index.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
     <body>
         <div id="main">
             <div id="side-panel">
-                <ul>
-                    <li><a id="lvl1">Level 1</a></li>
-                    <li><a id="lvl2">Level 2</a></li>
-                    <li><a id="lvl3">Level 3</a></li>
-                    <li><a id="lvl4">Level 4</a></li>
-                    <li><a id="lvl5">Level 5</a></li>
-                </ul>
+                <ul class="nav flex-column gap-3" >
+                    <li class="nav-item">
+                        <button type="button" class="btn btn-light"><a id="lvl1">Level 1</a></button>
+                    </li>
+                    <li class="nav-item">
+                        <button type="button" class="btn btn-light"><a id="lvl2">Level 2</a></button>
+                    </li>
+                    <li class="nav-item">
+                        <button type="button" class="btn btn-light"><a id="lvl3">Level 3</a></button>
+                    </li>
+                    <li class="nav-item">
+                        <button type="button" class="btn btn-light"><a id="lvl4">Level 4</a></button>
+                    </li>
+                    <li class="nav-item">
+                        <button type="button" class="btn btn-light"><a id="lvl5">Level 5</a></button>
+                    </li>
+                  </ul>
+
             </div>
             <div id="content">
                <h2 id="article">para1</h2>
@@ -24,6 +36,7 @@
         </div>
 
 <!------------Scripts------------>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script type="text/javascript" src="index.js"></script>
     </body>
 </html>
