--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
             <div id="side-panel">
                 <ul class="nav flex-column gap-3" >
                     <li class="nav-item">
-                        <button type="button" class="btn btn-light"><a id="lvl1">Level 1</a></button>
+                        <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#exampleModal1"><a id="lvl1">Level 1</a></button>
                     </li>
                     <li class="nav-item">
-                        <button type="button" class="btn btn-light"><a id="lvl2">Level 2</a></button>
+                        <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#exampleModal2"><a id="lvl2">Level 2</a></button>
                     </li>
                     <li class="nav-item">
-                        <button type="button" class="btn btn-light"><a id="lvl3">Level 3</a></button>
+                        <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#exampleModal3"><a id="lvl3">Level 3</a></button>
                     </li>
                     <li class="nav-item">
-                        <button type="button" class="btn btn-light"><a id="lvl4">Level 4</a></button>
+                        <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#exampleModal4"><a id="lvl4">Level 4</a></button>
                     </li>
                     <li class="nav-item">
-                        <button type="button" class="btn btn-light"><a id="lvl5">Level 5</a></button>
+                        <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#exampleModal5"><a id="lvl5">Level 5</a></button>
                     </li>
                   </ul>
 
@@ -32,6 +32,96 @@
                <p>article</p> 
                <h2>para2</h2>
                <p>text detected</p>
+            </div>
+        </div>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Level 1</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                sample paras
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Continue</button>
+                </div>
+            </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Level 2</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                sample paras
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Continue</button>
+                </div>
+            </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Level 3</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                sample paras
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Continue</button>
+                </div>
+            </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="exampleModal4" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Level 4</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                sample paras
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Continue</button>
+                </div>
+            </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="exampleModal5" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Level 5</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                sample paras
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Continue</button>
+                </div>
+            </div>
             </div>
         </div>
 
