--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Continue</button>
+                <!-- <button type="button" class="btn btn-primary">Continue</button> -->
                 </div>
             </div>
             </div>
