--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Continue</button>
+                <!-- <button type="button" class="btn btn-primary">Continue</button> -->
                 </div>
             </div>
             </div>
@@ -83,7 +83,7 @@
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Continue</button>
+                <!-- <button type="button" class="btn btn-primary">Continue</button> -->
                 </div>
             </div>
             </div>
@@ -101,7 +101,7 @@
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Continue</button>
+                <!-- <button type="button" class="btn btn-primary">Continue</button> -->
                 </div>
             </div>
             </div>
@@ -119,7 +119,7 @@
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Continue</button>
+                <!-- <button type="button" class="btn btn-primary">Continue</button> -->
                 </div>
             </div>
             </div>
