--- a/homepage.html
+++ b/homepage.html
@@ -33,10 +33,32 @@
             </div>
             <!--content-->
             <div id="content">
-               <h2 id="article">para1</h2>
-               <p>article</p> 
-               <h2>para2</h2>
-               <p>text detected</p>
+              <header>
+                  <h1>Learn To Pronounce</h1>
+                  <h5>Enhance the way you speak.</h5>
+              </header>
+                <div>
+                    <p>Proper pronunciation is the key to mastering the English language. Without correct pronunciation, the 
+                       vocabulary that you know will be less effective when communicating. It is always better to know fewer words
+                       and pronounce them well than to know a lot of words and pronounce them badly.
+                    </p>
+
+                    <p> Bad pronunciation can lead to misunderstandings that may cause mishaps. It can also lead to people avoiding 
+                      communication with you because they feel you are too difficult to talk to.
+                    </p>
+
+                    <p>Command on english ranks at the top of your skills.The way you speak puts great impact on the listeners.Improve 
+                      your speaking skills by using <q> Learn To Pronounce</q>
+                    </p>  
+                </div>
+                <div>
+                    <h2>Instructions</h2>
+                    <ol>
+                        <li>Start your practice by selecting the level.Toughness increases with the level</li>
+                        <li>After you click the level a dialog will appear from which select the article you want to practice</li>
+                        <li>start practicing</li>
+                    </ol>
+                </div>
             </div>
         </div>
         <!-- Modal -->
@@ -70,7 +92,7 @@
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <!-- <button type="button" class="btn btn-primary">Continue</button> -->
+                <button type="button" class="btn btn-primary">Continue</button>
                 </div>
             </div>
             </div>
@@ -88,7 +110,7 @@
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <!-- <button type="button" class="btn btn-primary">Continue</button> -->
+                <button type="button" class="btn btn-primary">Continue</button>
                 </div>
             </div>
             </div>
@@ -106,7 +128,7 @@
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <!-- <button type="button" class="btn btn-primary">Continue</button> -->
+                <button type="button" class="btn btn-primary">Continue</button>
                 </div>
             </div>
             </div>
@@ -124,7 +146,7 @@
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <!-- <button type="button" class="btn btn-primary">Continue</button> -->
+                <button type="button" class="btn btn-primary">Continue</button>
                 </div>
             </div>
             </div>
