--- a/homepage.html
+++ b/homepage.html
@@ -4,11 +4,15 @@
         <title>Speech-checker</title>
         <link type="text/css" rel="stylesheet" href="index.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id="main">
             <!--side panel-->
-            <div id="side-panel">
+            <div id="side-panel" class="animate__animated animate_bounceInLeft" >
                 <ul class="nav flex-column gap-3" >
                     <li class="nav-item">
                         <button type="button" class="btn btn-light" ><a href="homepage.html">Home</a></button>
@@ -35,9 +39,10 @@
             <div id="content">
               <header>
                   <h1>Learn To Pronounce</h1>
-                  <h5>Enhance the way you speak.</h5>
+                  
               </header>
-                <div>
+                <div id="intro">
+                    <h3>Enhance the way you speak.</h3>
                     <p>Proper pronunciation is the key to mastering the English language. Without correct pronunciation, the 
                        vocabulary that you know will be less effective when communicating. It is always better to know fewer words
                        and pronounce them well than to know a lot of words and pronounce them badly.
@@ -51,8 +56,8 @@
                       your speaking skills by using <q> Learn To Pronounce</q>
                     </p>  
                 </div>
-                <div>
-                    <h2>Instructions</h2>
+                <div id="instructions">
+                    <h3>Instructions</h3>
                     <ol>
                         <li>Start your practice by selecting the level.Toughness increases with the level</li>
                         <li>After you click the level a dialog will appear from which select the article you want to practice</li>
