sample para added

--- a/lvl1topic1.html
+++ b/lvl1topic1.html
@@ -38,32 +38,12 @@
             <!--content-->
             <div id="content">
               <header>
-                  <h1>Learn To Pronounce</h1>
+                  <h1>Topic 1</h1>
                   
               </header>
-                <div id="intro">
-                    <h3>Enhance the way you speak.</h3>
-                    <p>Proper pronunciation is the key to mastering the English language. Without correct pronunciation, the 
-                       vocabulary that you know will be less effective when communicating. It is always better to know fewer words
-                       and pronounce them well than to know a lot of words and pronounce them badly.
-                    </p>
-
-                    <p> Bad pronunciation can lead to misunderstandings that may cause mishaps. It can also lead to people avoiding 
-                      communication with you because they feel you are too difficult to talk to.
-                    </p>
-
-                    <p>Command on english ranks at the top of your skills.The way you speak puts great impact on the listeners.Improve 
-                      your speaking skills by using <q> Learn To Pronounce</q>
-                    </p>  
-                </div>
-                <div id="instructions">
-                    <h3>Instructions</h3>
-                    <ol>
-                        <li>Start your practice by selecting the level.Toughness increases with the level</li>
-                        <li>After you click the level a dialog will appear from which select the article you want to practice</li>
-                        <li>start practicing</li>
-                    </ol>
-                </div>
+              <div>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat, perspiciatis odio aut unde laudantium doloribus numquam voluptatem explicabo iure voluptate illum eveniet temporibus voluptatibus quasi autem assumenda eaque? Rem, esse!</p>
+              </div>
             </div>
         </div>
         <!-- Modal -->
