added paras according to toughness
Removed index.html as it was not required homepage.html will do.

--- a/homepage.html
+++ b/homepage.html
@@ -95,7 +95,10 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                sample paras
+                    <h3>Select your topic:</h3>
+                    <ul>
+                        <li><a href="./lvl2topic1.html">Topic 1</a></li>
+                    </ul>
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -112,7 +115,10 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                sample paras
+                    <h3>Select your topic:</h3>
+                    <ul>
+                        <li><a href="./lvl3topic1.html">Topic 1</a></li>
+                    </ul>
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -129,7 +135,10 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                sample paras
+                    <h3>Select your topic:</h3>
+                    <ul>
+                        <li><a href="./lvl4topic1.html">Topic 1</a></li>
+                    </ul>
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -146,7 +155,10 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                sample paras
+                    <h3>Select your topic:</h3>
+                    <ul>
+                        <li><a href="./lvl5topic1.html">Topic 1</a></li>
+                    </ul>
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
