--- a/lvl3topic1.html
+++ b/lvl3topic1.html
@@ -5,11 +5,14 @@
         <link type="text/css" rel="stylesheet" href="index.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id="main">
             <!--side panel-->
-            <div id="side-panel">
+            <div id="side-panel" class="animate__animated animate_bounceInLeft" >
                 <ul class="nav flex-column gap-3" >
                     <li class="nav-item">
                         <button type="button" class="btn btn-light" ><a href="homepage.html">Home</a></button>
@@ -34,10 +37,26 @@
             </div>
             <!--content-->
             <div id="content">
-               <h2 id="article">para1</h2>
-               <p>article</p> 
-               <h2>para2</h2>
-               <p>text detected</p>
+              <header>
+                  <h1>An excerpt from <q>The Giver</q></h1>
+                  
+              </header>
+              <div>
+                  <p>
+                        It was almost December, and Jonas was beginning to be frightened. No. Wrong word, 
+                        Jonas thought. Frightened meant that deep, sickening feeling of something terrible about 
+                        to happen. Frightened was the way he had felt a year ago when an unidentified aircraft had overflown the 
+                        community twice. He had seen it both times. Squinting toward the sky, he had seen the sleek jet, almost a blur at 
+                        its high speed, go past, and a second later heard the blast of sound that followed. Then one more time, a moment later, 
+                        from the opposite direction, the same plane.
+                  </p>
+                   <p> 
+                        At first, he had been only fascinated. He had never seen aircraft so close, for it was against the rules for Pilots
+                        to fly over the community. Occasionally, when supplies were delivered by cargo planes to the landing field across the
+                        river, the children rode their bicycles to the river bank and watched, intrigued, the unloading and then the takeoff 
+                        directed to the west, always away from the community. 
+                  </p>
+              </div>
             </div>
         </div>
         <!-- Modal -->
@@ -49,11 +68,13 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                sample paras
+                    <h3>Select your topic:</h3>
+                    <ul>
+                        <li><a href="./lvl1topic1.html">Topic 1</a></li>
+                    </ul>
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <!-- <button type="button" class="btn btn-primary">Continue</button> -->
                 </div>
             </div>
             </div>
@@ -67,11 +88,13 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                sample paras
+                    <h3>Select your topic:</h3>
+                    <ul>
+                        <li><a href="./lvl2topic1.html">Topic 1</a></li>
+                    </ul>
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <!-- <button type="button" class="btn btn-primary">Continue</button> -->
                 </div>
             </div>
             </div>
@@ -85,11 +108,13 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                sample paras
+                    <h3>Select your topic:</h3>
+                    <ul>
+                        <li><a href="./lvl3topic1.html">Topic 1</a></li>
+                    </ul>
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <!-- <button type="button" class="btn btn-primary">Continue</button> -->
                 </div>
             </div>
             </div>
@@ -103,11 +128,13 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                sample paras
+                    <h3>Select your topic:</h3>
+                    <ul>
+                        <li><a href="./lvl4topic1.html">Topic 1</a></li>
+                    </ul>
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <!-- <button type="button" class="btn btn-primary">Continue</button> -->
                 </div>
             </div>
             </div>
@@ -121,11 +148,13 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                sample paras
+                    <h3>Select your topic:</h3>
+                    <ul>
+                        <li><a href="./lvl5topic1.html">Topic 1</a></li>
+                    </ul>
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <!-- <button type="button" class="btn btn-primary">Continue</button> -->
                 </div>
             </div>
             </div>
