--- a/lvl2topic1.html
+++ b/lvl2topic1.html
@@ -38,15 +38,26 @@
             <!--content-->
             <div id="content">
               <header>
-                  <h1>The Foolish donkey</h1>   
+                  <h1>A qoute from <q>The Alchemist</q></h1>
+                  
               </header>
               <div>
-                  <p>A salt seller used to carry the salt bag on his donkey to the market every day.</p>
-                  <p>On the way they had to cross a stream. One day the donkey suddenly tumbled down the stream and the salt bag also fell into the water. The salt dissolved in the water and hence the bag became very light to carry. The donkey was happy.
-                    Then the donkey started to play the same trick every day.</p> 
-                  <p>The salt seller came to understand the trick and decided to teach a lesson to it. The next day he loaded a cotton bag on the donkey.
-                    Again it played the same trick hoping that the cotton bag would be still become lighter.</p>  
-                  <p>But the dampened cotton became very heavy to carry and the donkey suffered. It learnt a lesson. It didn’t play the trick anymore after that day, and the seller was happy</p>  
+                  <p>When
+                    someone sees the same
+                    people every day, as had
+                    happened with him at the
+                    seminary, they wind up
+                    becoming a part of that
+                    person’s life. And then they
+                    want the person to change. If
+                    someone isn’t what others
+                    want them to be, the others
+                    become angry.Everyone
+                    seems to have a clear idea of
+                    how other people should lead
+                    their lives, but none about his
+                    or her own
+                    </p>
               </div>
             </div>
         </div>
