--- a/lvl2topic1.html
+++ b/lvl2topic1.html
@@ -42,21 +42,7 @@
                   
               </header>
               <div>
-                  <p>When
-                    someone sees the same
-                    people every day, as had
-                    happened with him at the
-                    seminary, they wind up
-                    becoming a part of that
-                    person’s life. And then they
-                    want the person to change. If
-                    someone isn’t what others
-                    want them to be, the others
-                    become angry.Everyone
-                    seems to have a clear idea of
-                    how other people should lead
-                    their lives, but none about his
-                    or her own
+                  <p>When someone sees the same people every day, as had happened with him at the seminary, they wind up becoming a part of that person’s life. And then they want the person to change. If someone isn’t what others want them to be, the others become angry.Everyone seems to have a clear idea of how other people should lead their lives, but none about his or her own
                     </p>
               </div>
             </div>
